app/javascript/stylesheets/custom.scss
#trackmap {
    height: 400px;
    width: 600px;
}

.card {
    margin-left: 30%;
    margin-right: 30%;
    margin-top: 20%;
    margin-bottom: 30%;
}

.text-center {
    text-align: center !important;
    padding-top: 30px;
}

.ptitle {
    font-weight: bold;
}

#log {
    margin-top: 20px;
    margin-bottom: 60px;
    font-size: 1.2rem !important;
}


/* ========================================================= */
/* ================  MEDIA QUERIES - PORTRAIT ============== */
/* ========================================================= */


@media (max-width: 992px) and (orientation : portrait) { 



}

/* ========================================================= */

@media (max-width: 767px) and (orientation : portrait) {


}

/* ========================================================= */

@media (max-width: 576px) and (orientation : portrait) {

  .card {
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 5%;
    margin-bottom: 20%;
  }

    #trackmap {
        height: 400px;
        width: 100vw;
    }
}

/* =============================================================== */
/* ===================MEDIA QUERIES - LANDSCAPE ================== */
/* =============================================================== */

@media (max-width:800px) and (min-width:400px) {

}


@media (min-width:802px) and (max-width:1200px) {

    
}

